--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
           </li>
           <li>
             <a
-              href="#about"
+              href="about.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >About Us</a
             >
@@ -333,7 +333,7 @@
         });
       }
     </script>
-  <!-- Code Snippets / Demo Section Logic moved to index.js -->
+    <!-- Code Snippets / Demo Section Logic moved to index.js -->
 
     <!-- Welcome Message Section -->
     <section class="w-full bg-white py-12 px-4 md:px-0 flex justify-center">
@@ -565,7 +565,6 @@
                 fill="none"
                 stroke="currentColor"
                 stroke-width="2"
-        <!-- Animated Skill Clouds Logic moved to index.js -->
                 viewBox="0 0 24 24"
               >
                 <path
@@ -758,62 +757,6 @@
       </div>
     </section>
 
-    <!-- Animated Skill Clouds Section -->
-    <section
-      id="skill-clouds"
-      class="relative w-full py-20 px-4 overflow-hidden"
-    >
-      <div
-        class="max-w-5xl mx-auto flex flex-col md:flex-row items-center md:items-stretch gap-10 md:gap-20 lg:gap-32 relative z-10"
-      >
-        <!-- Floating Skill Tags Left -->
-        <div class="w-full md:w-1/2 flex justify-center items-center">
-          <div
-            id="skill-cloud-container"
-            class="relative w-full h-72 md:h-[28rem] flex flex-wrap items-center justify-center overflow-visible"
-          ></div>
-        </div>
-        <!-- Content Right -->
-        <div
-          class="w-full md:w-1/2 flex flex-col justify-center items-center md:items-start text-center md:text-left"
-        >
-          <h2
-            class="text-3xl md:text-5xl font-extrabold text-primary mb-2 animate-fade-in-up"
-          >
-            Explore Our Skills
-          </h2>
-          <h3
-            class="text-lg md:text-2xl font-semibold text-secondary mb-4 animate-fade-in-up delay-150"
-          >
-            Animated Skill Clouds
-          </h3>
-          <p
-            class="text-primary/80 text-base md:text-lg mb-8 max-w-2xl animate-fade-in-up delay-300"
-          >
-            Our department excels in a wide range of research and technical
-            domains. Hover over a skill to learn more, or click to explore
-            related programs and labs. Watch the skills float and interact for a
-            playful, modern experience!
-          </p>
-          <div
-            id="skill-cloud-info"
-            class="mt-2 text-primary/80 text-base min-h-[32px] transition-all duration-300"
-          ></div>
-        </div>
-      </div>
-      <div class="absolute inset-0 pointer-events-none z-0">
-        <div
-          class="absolute w-72 rounded-full blur-3xl left-[-80px] top-[-60px] animate-pulse-slow"
-        ></div>
-        <div
-          class="absolute w-60 h-60 rounded-full blur-2xl right-[-60px] top-32 animate-pulse-slow2"
-        ></div>
-        <div
-          class="absolute w-80 h-80 rounded-full blur-3xl left-1/2 bottom-[-100px] -translate-x-1/2 animate-pulse-slow3"
-        ></div>
-      </div>
-    </section>
-
     <section class="py-12" id="mini-gallery">
       <div class="max-w-7xl mx-auto px-4">
         <div
@@ -888,6 +831,61 @@
             </div>
           </div>
         </div>
+      </div>
+    </section>
+    <!-- Animated Skill Clouds Section -->
+    <section
+      id="skill-clouds"
+      class="relative w-full py-20 px-4 overflow-hidden"
+    >
+      <div
+        class="max-w-5xl mx-auto flex flex-col md:flex-row items-center md:items-stretch gap-10 md:gap-20 lg:gap-32 relative z-10"
+      >
+        <!-- Floating Skill Tags Left -->
+        <div class="w-full md:w-1/2 flex justify-center items-center">
+          <div
+            id="skill-cloud-container"
+            class="relative w-full h-72 md:h-[28rem] flex flex-wrap items-center justify-center overflow-visible"
+          ></div>
+        </div>
+        <!-- Content Right -->
+        <div
+          class="w-full md:w-1/2 flex flex-col justify-center items-center md:items-start text-center md:text-left"
+        >
+          <h2
+            class="text-3xl md:text-5xl font-extrabold text-primary mb-2 animate-fade-in-up"
+          >
+            Explore Our Skills
+          </h2>
+          <h3
+            class="text-lg md:text-2xl font-semibold text-secondary mb-4 animate-fade-in-up delay-150"
+          >
+            Animated Skill Clouds
+          </h3>
+          <p
+            class="text-primary/80 text-base md:text-lg mb-8 max-w-2xl animate-fade-in-up delay-300"
+          >
+            Our department excels in a wide range of research and technical
+            domains. Hover over a skill to learn more, or click to explore
+            related programs and labs. Watch the skills float and interact for a
+            playful, modern experience!
+          </p>
+          <div
+            id="skill-cloud-info"
+            class="mt-2 text-primary/80 text-base min-h-[32px] transition-all duration-300"
+          ></div>
+        </div>
+      </div>
+      <div class="absolute inset-0 pointer-events-none z-0">
+        <div
+          class="absolute w-72 rounded-full blur-3xl left-[-80px] top-[-60px] animate-pulse-slow"
+        ></div>
+        <div
+          class="absolute w-60 h-60 rounded-full blur-2xl right-[-60px] top-32 animate-pulse-slow2"
+        ></div>
+        <div
+          class="absolute w-80 h-80 rounded-full blur-3xl left-1/2 bottom-[-100px] -translate-x-1/2 animate-pulse-slow3"
+        ></div>
       </div>
     </section>
     <!-- Interactive Timeline Section -->
@@ -1563,7 +1561,9 @@
           >
             <li><a href="#home" class="hover:underline block py-1">Home</a></li>
             <li>
-              <a href="#about" class="hover:underline block py-1">About Us</a>
+              <a href="about.html" class="hover:underline block py-1"
+                >About Us</a
+              >
             </li>
             <li>
               <a href="#faculty" class="hover:underline block py-1">Faculty</a>
