--- a/about.html
+++ b/about.html
@@ -109,7 +109,7 @@
           </li>
           <li>
             <a
-              href="#faculty"
+              href="faculty.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Faculty</a
             >
@@ -164,7 +164,7 @@
         </li>
         <li>
           <a
-            href="#faculty"
+            href="faculty.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Faculty</a
           >
@@ -901,7 +901,9 @@
               >
             </li>
             <li>
-              <a href="#faculty" class="hover:underline block py-1">Faculty</a>
+              <a href="faculty.html" class="hover:underline block py-1"
+                >Faculty</a
+              >
             </li>
             <li>
               <a href="#programs" class="hover:underline block py-1"
