--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
         <ul id="nav-links" class="hidden md:flex space-x-8 font-medium">
           <li>
             <a
-              href="#home"
+              href="index.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Home</a
             >
@@ -109,35 +109,35 @@
           </li>
           <li>
             <a
-              href="#faculty"
+              href="faculty.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Faculty</a
             >
           </li>
           <li>
             <a
-              href="#programs"
+              href="programs.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Programs</a
             >
           </li>
           <li>
             <a
-              href="#research"
+              href="research.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Research</a
             >
           </li>
           <li>
             <a
-              href="#students"
+              href="students.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Students</a
             >
           </li>
           <li>
             <a
-              href="#contact"
+              href="contact.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Contact Us</a
             >
@@ -150,7 +150,7 @@
       >
         <li>
           <a
-            href="#home"
+            href="index.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Home</a
           >
@@ -164,35 +164,35 @@
         </li>
         <li>
           <a
-            href="#faculty"
+            href="faculty.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Faculty</a
           >
         </li>
         <li>
           <a
-            href="#programs"
+            href="programs.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Programs</a
           >
         </li>
         <li>
           <a
-            href="#research"
+            href="research.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Research</a
           >
         </li>
         <li>
           <a
-            href="#students"
+            href="students.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Students</a
           >
         </li>
         <li>
           <a
-            href="#contact"
+            href="contact.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Contact Us</a
           >
@@ -466,7 +466,7 @@
             >
           </a>
           <a
-            href="#research"
+            href="research.html"
             class="group flex flex-col items-center justify-center bg-white/90 rounded-2xl shadow-xl border-2 border-white hover:border-primary hover:bg-primary/10 transition p-6 text-center h-full min-h-[220px]"
           >
             <div
@@ -1559,7 +1559,9 @@
           <ul
             class="space-y-2 text-secondary/90 text-sm flex flex-col items-center md:items-start"
           >
-            <li><a href="#home" class="hover:underline block py-1">Home</a></li>
+            <li>
+              <a href="index.html" class="hover:underline block py-1">Home</a>
+            </li>
             <li>
               <a href="about.html" class="hover:underline block py-1"
                 >About Us</a
