--- a/faculty.html
+++ b/faculty.html
@@ -95,7 +95,7 @@
         <ul id="nav-links" class="hidden md:flex space-x-8 font-medium">
           <li>
             <a
-              href="#home"
+              href="index.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Home</a
             >
@@ -150,7 +150,7 @@
       >
         <li>
           <a
-            href="#home"
+            href="index.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Home</a
           >
@@ -1218,7 +1218,9 @@
           <ul
             class="space-y-2 text-secondary/90 text-sm flex flex-col items-center md:items-start"
           >
-            <li><a href="#home" class="hover:underline block py-1">Home</a></li>
+            <li>
+              <a href="index.html" class="hover:underline block py-1">Home</a>
+            </li>
             <li>
               <a href="about.html" class="hover:underline block py-1"
                 >About Us</a
