--- a/about.html
+++ b/about.html
@@ -116,28 +116,28 @@
           </li>
           <li>
             <a
-              href="#programs"
+              href="programs.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Programs</a
             >
           </li>
           <li>
             <a
-              href="#research"
+              href="research.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Research</a
             >
           </li>
           <li>
             <a
-              href="#students"
+              href="students.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Students</a
             >
           </li>
           <li>
             <a
-              href="#contact"
+              href="contact.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Contact Us</a
             >
@@ -171,28 +171,28 @@
         </li>
         <li>
           <a
-            href="#programs"
+            href="programs.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Programs</a
           >
         </li>
         <li>
           <a
-            href="#research"
+            href="research.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Research</a
           >
         </li>
         <li>
           <a
-            href="#students"
+            href="students.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Students</a
           >
         </li>
         <li>
           <a
-            href="#contact"
+            href="contact.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Contact Us</a
           >
@@ -1498,7 +1498,7 @@
               >
             </li>
             <li>
-              <a href="#programs" class="hover:underline block py-1"
+              <a href="programs.html" class="hover:underline block py-1"
                 >Programs</a
               >
             </li>
