--- a/faculty.html
+++ b/faculty.html
@@ -116,28 +116,28 @@
           </li>
           <li>
             <a
-              href="#programs"
+              href="programs.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Programs</a
             >
           </li>
           <li>
             <a
-              href="#research"
+              href="research.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Research</a
             >
           </li>
           <li>
             <a
-              href="#students"
+              href="students.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Students</a
             >
           </li>
           <li>
             <a
-              href="#contact"
+              href="contact.html"
               class="hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
               >Contact Us</a
             >
@@ -171,28 +171,28 @@
         </li>
         <li>
           <a
-            href="#programs"
+            href="programs.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Programs</a
           >
         </li>
         <li>
           <a
-            href="#research"
+            href="research.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Research</a
           >
         </li>
         <li>
           <a
-            href="#students"
+            href="students.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Students</a
           >
         </li>
         <li>
           <a
-            href="#contact"
+            href="contact.html"
             class="block hover:bg-secondary hover:text-primary px-3 py-2 rounded transition"
             >Contact Us</a
           >
@@ -1170,11 +1170,15 @@
         </p>
         <p class="text-base text-gray-700 mb-4">
           Visit the
-          <a href="#research" class="text-secondary font-bold hover:underline"
+          <a
+            href="research.html"
+            class="text-secondary font-bold hover:underline"
             >Research</a
           >
           page or
-          <a href="#contact" class="text-secondary font-bold hover:underline"
+          <a
+            href="contact.html"
+            class="text-secondary font-bold hover:underline"
             >Contact us</a
           >.
         </p>
@@ -1232,7 +1236,7 @@
               >
             </li>
             <li>
-              <a href="#programs" class="hover:underline block py-1"
+              <a href="programs.html" class="hover:underline block py-1"
                 >Programs</a
               >
             </li>
