--- a/index.html
+++ b/index.html
@@ -396,7 +396,7 @@
         </div>
         <div class="grid grid-cols-1 md:grid-cols-3 gap-4 flex-1 w-full">
           <a
-            href="#programs"
+            href="programs.html"
             class="group flex flex-col items-center justify-center bg-white/90 rounded-2xl shadow-xl border-2 border-white hover:border-primary hover:bg-primary/10 transition p-6 text-center h-full min-h-[220px]"
           >
             <div
@@ -431,7 +431,7 @@
             >
           </a>
           <a
-            href="#programs"
+            href="programs.html"
             class="group flex flex-col items-center justify-center bg-primary rounded-2xl shadow-xl border-2 border-primary hover:border-secondary hover:bg-secondary transition p-6 text-center h-full min-h-[220px]"
           >
             <div
@@ -1571,7 +1571,7 @@
               <a href="#faculty" class="hover:underline block py-1">Faculty</a>
             </li>
             <li>
-              <a href="#programs" class="hover:underline block py-1"
+              <a href="programs.html" class="hover:underline block py-1"
                 >Programs</a
               >
             </li>
@@ -1689,121 +1689,121 @@
           label: "AI",
           color: "bg-yellow-300",
           info: "Artificial Intelligence: Machine Learning, Deep Learning, Data Science",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Networking",
           color: "bg-blue-200",
           info: "Networking: Computer Networks, IoT, Wireless",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Cybersecurity",
           color: "bg-red-200",
           info: "Cybersecurity: Security, Cryptography, Privacy",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Robotics",
           color: "bg-green-200",
           info: "Robotics: Automation, Embedded Systems",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Data Science",
           color: "bg-purple-200",
           info: "Data Science: Big Data, Analytics, Visualization",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Software Eng.",
           color: "bg-pink-200",
           info: "Software Engineering: DevOps, Agile, Testing",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Cloud",
           color: "bg-cyan-200",
           info: "Cloud Computing: Distributed Systems, Web Services",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Bioinformatics",
           color: "bg-lime-200",
           info: "Bioinformatics: Computational Biology",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Theory",
           color: "bg-orange-200",
           info: "Theory: Algorithms, Complexity, Computation",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Web Dev",
           color: "bg-indigo-200",
           info: "Web Development: Frontend, Backend, Full Stack",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Mobile Apps",
           color: "bg-teal-200",
           info: "Mobile App Development: Android, iOS, Cross-Platform",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Game Dev",
           color: "bg-fuchsia-200",
           info: "Game Development: Graphics, Engines, Design",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "IoT",
           color: "bg-emerald-200",
           info: "Internet of Things: Embedded, Sensors, Smart Devices",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "AR/VR",
           color: "bg-violet-200",
           info: "Augmented & Virtual Reality: Immersive Tech",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Big Data",
           color: "bg-yellow-100",
           info: "Big Data: Analytics, Storage, Processing",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Quantum",
           color: "bg-gray-200",
           info: "Quantum Computing: Algorithms, Theory",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "UI/UX",
           color: "bg-rose-200",
           info: "UI/UX Design: Human-Computer Interaction",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Blockchain",
           color: "bg-yellow-200",
           info: "Blockchain: Distributed Ledger, Crypto",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Comp Vision",
           color: "bg-blue-100",
           info: "Computer Vision: Image Processing, Recognition",
-          link: "#programs",
+          link: "programs.html",
         },
         {
           label: "Natural Language",
           color: "bg-green-100",
           info: "Natural Language Processing: Text, Speech, AI",
-          link: "#programs",
+          link: "programs.html",
         },
       ];
       function randomPos(radius, centerX, centerY) {
