--- a/research.html
+++ b/research.html
@@ -1390,7 +1390,7 @@
               <a href="#faculty" class="hover:underline block py-1">Faculty</a>
             </li>
             <li>
-              <a href="#programs" class="hover:underline block py-1"
+              <a href="programs.html" class="hover:underline block py-1"
                 >Programs</a
               >
             </li>
